--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@atlaskit/button": "^13.3.8",
     "@atlaskit/code": "^11.1.3",
     "@atlaskit/css-reset": "^5.0.10",
+    "@atlaskit/datetime-picker": "^9.2.8",
     "@atlaskit/dropdown-menu": "^9.0.1",
     "@atlaskit/flag": "^12.3.9",
     "@atlaskit/form": "^7.1.3",
@@ -28,6 +29,7 @@
     "@atlaskit/select": "^11.0.7",
     "@atlaskit/textfield": "^3.1.7",
     "@atlaskit/theme": "^9.5.1",
+    "@atlaskit/toggle": "^8.1.6",
     "@atlaskit/tree": "^7.1.2",
     "antd": "^4.0.3",
     "prop-types": "^15.6.0",
