--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "surge": "bash surge_login.sh && surge --project ./build/ --domain atlaskit-starter.surge.sh"
+    "surge": "bash surge_login.sh && surge --project ./build/ --domain atlaskit-starter.surge.sh",
+    "api": "rm -rf gen/api && openapi-generator generate -i http://web:8000/openapi.json --generator-name javascript -o gen/api && cd gen/api && yarn && yarn build"
   },
   "keywords": [],
   "author": "Atlassian",
@@ -42,6 +43,7 @@
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^1.0.12-4.3.0",
     "react-scripts": "^3.4.0",
     "surge": "^0.21.3"
   },
