--- a/heroku.yml
+++ b/heroku.yml
@@ -3,6 +3,4 @@ setup:
     - plan: heroku-postgresql
 build:
   docker:
-    web: backend/Dockerfile
-run:
-  web: uvicorn app.main:app --reload --workers 4 --host 0.0.0.0 --port 8000
+    web: Dockerfile
