--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@ http {
   include /etc/nginx/mime.types;
   
   server {
-    listen $PORT;
+    listen 80;
     client_max_body_size 4G;
 
     # server_name example.com;
