--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,13 @@
+worker_processes <%= ENV['NGINX_WORKERS'] || 4 %>;
+
 events {}
 
 http {
   include /etc/nginx/mime.types;
   
   server {
-    listen 80;
-    client_max_body_size 4G;
-
-    # server_name example.com;
+    listen <%= ENV['PORT'] %>;
+    server_name localhost;
 
     location / {
       proxy_set_header Host $http_host;
