--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ http {
   include /etc/nginx/mime.types;
   
   server {
-    listen <%= ENV['PORT'] %>;
+    listen $PORT;
     server_name localhost;
 
     location / {
