--- a/heroku.yml
+++ b/heroku.yml
@@ -6,4 +6,4 @@ build:
     web: Dockerfile
 
 run:
-  web: uvicorn app.main:app --reload --workers 4 --port $PORT #uvicorn app.main:app --uds /var/sockets/uvicorn.sock
+  web: uvicorn app.main:app --reload --workers 4 --host 0.0.0.0 --port $PORT #uvicorn app.main:app --uds /var/sockets/uvicorn.sock
