--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,7 @@ http {
   server {
     listen $PORT;
     server_name localhost;
+    client_max_body_size 100M;
 
     location / {
       proxy_set_header Host $http_host;
