--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^16.8.4",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-virtualized": "^9.21.2",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
