--- a/nginx.conf
+++ b/nginx.conf
@@ -22,6 +22,12 @@ http {
       root /app;
       try_files $uri $uri/ /discovery/index.html;
     }
+
+    location /docs {
+      # path for static files
+      root /docs;
+      try_files $uri $uri/ /app/index.html;
+    }
   }
 
   upstream uvicorn {
