--- a/nginx.conf
+++ b/nginx.conf
@@ -25,8 +25,7 @@ http {
 
     location /docs {
       # path for static files
-      root /docs;
-      try_files $uri $uri/ /app/index.html;
+      root /app;
     }
   }
 
