trying to fix access to docs...need a trailing / otherwise the path is not found

--- a/nginx.conf
+++ b/nginx.conf
@@ -26,6 +26,7 @@ http {
     location /docs {
       # path for static files
       root /app;
+      try_files $uri $uri/ /docs/index.html;
     }
   }
 
