trying to fix access to docs...need a trailing / otherwise the path is not found

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,6 +23,8 @@ http {
       try_files $uri $uri/ /discovery/index.html;
     }
 
+    rewrite ^docs$ docs/ permanent;
+
     location /docs {
       # path for static files
       root /app;
