--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@atlaskit/avatar": "^17.1.8",
+    "@atlaskit/banner": "^10.1.7",
     "@atlaskit/button": "^13.3.8",
     "@atlaskit/code": "^11.1.3",
     "@atlaskit/css-reset": "^5.0.10",
@@ -38,8 +39,10 @@
     "react-bootstrap-table-next": "^4.0.0",
     "react-collapsible": "^2.7.0",
     "react-dom": "^16.8.4",
+    "react-grid-layout": "^0.18.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-transition-group": "^4.3.0",
     "react-virtualized": "^9.21.2",
     "styled-components": "^5.0.1"
   },
