--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "react-collapsible": "^2.7.0",
     "react-dom": "^16.8.4",
     "react-grid-layout": "^0.18.3",
+    "react-resize-detector": "^4.2.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-transition-group": "^4.3.0",
